[package]
name = "bevy_rapier_shape_cast_imprecision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.21.0", features = ["parallel", "simd-stable"] }
